kubernetes/apps/squirrel/squirrel-app/app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squirrel-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squirrel-backend
  template:
    metadata:
      labels:
        app: squirrel-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/axelfrache/squirrel-backend:latest@sha256:5702e014e035f880ffaf6d2896203fc6a6f1eae09b977896af46124711df4b59 # {"$imagepolicy": "flux-system:squirrel-backend"}
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 30
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: squirrel-backend
spec:
  selector:
    app: squirrel-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
