kubernetes/apps/squirrel/squirrel-app/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squirrel-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squirrel-frontend
  template:
    metadata:
      labels:
        app: squirrel-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/axelfrache/squirrel-frontend:latest@sha256:d3194e6e7f0197b5e275e0cd41450d057fb6ef11bd47165727848383f7d706cc # {"$imagepolicy": "flux-system:squirrel-frontend"}
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: squirrel-frontend
spec:
  selector:
    app: squirrel-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
