kubernetes/apps/squirrel/squirrel-app/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: squirrel-frontend
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - squirrel.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: squirrel-frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: squirrel-backend
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - squirrel-api.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: squirrel-backend
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: squirrel-minio
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - squirrel-minio.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: squirrel-minio
          port: 9001
